--- a/class_Exercise_1.ipynb
+++ b/class_Exercise_1.ipynb
@@ -113,10 +113,28 @@
         "\n"
       ],
       "metadata": {
-        "id": "-tDxGwOHQ_ME"
+        "id": "-tDxGwOHQ_ME",
+        "outputId": "46ffecbd-7595-4515-d273-9f46c4d41d91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.Register 2.Login 3.Exit\n",
+            "Enter your choice (1/2/3):1\n",
+            "Register\n",
+            "Enter username:lily\n",
+            "Enter password:12345\n",
+            "Registration successful\n",
+            "1.Register 2.Login 3.Exit\n"
+          ]
+        }
+      ]
     }
   ]
 }
