--- a/class_Exercise_1.ipynb
+++ b/class_Exercise_1.ipynb
@@ -114,7 +114,7 @@
       ],
       "metadata": {
         "id": "-tDxGwOHQ_ME",
-        "outputId": "46ffecbd-7595-4515-d273-9f46c4d41d91",
+        "outputId": "f6818b3a-0958-4834-e064-d8b89b2c00ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -122,14 +122,14 @@
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1.Register 2.Login 3.Exit\n",
-            "Enter your choice (1/2/3):1\n",
             "Register\n",
-            "Enter username:lily\n",
-            "Enter password:12345\n",
             "Registration successful\n",
             "1.Register 2.Login 3.Exit\n"
           ]
