--- a/class_Exercise_1.ipynb
+++ b/class_Exercise_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNxt5mfDnn0WXe8BRE9aSh",
+      "authorship_tag": "ABX9TyMCjfAZ4/pONnyxmlW/B9pB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "couE8emQkAXp",
-        "outputId": "ffb8ebe4-fed4-4241-a9d3-f03cd387b022"
+        "outputId": "ffb8ebe4-fed4-4241-a9d3-f03cd387b022",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -70,7 +71,7 @@
         "  else:\n",
         "    print(\"invalid amount\")\n",
         "elif(choice==3):\n",
-        "  print(\"Account name\",Name)\n",
+        "  print(\"Account name\",Name)                                                                         l\n",
         "  print(\"Balance\",balance)\n",
         "else:\n",
         "  print(\"Invalid choice!!\")\n"
@@ -114,10 +115,11 @@
       ],
       "metadata": {
         "id": "-tDxGwOHQ_ME",
-        "outputId": "f6818b3a-0958-4834-e064-d8b89b2c00ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true,
+        "outputId": "f6818b3a-0958-4834-e064-d8b89b2c00ae"
       },
       "execution_count": null,
       "outputs": [
